# betl

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  SPEC.md  SPEC_CORE.md
bench/: CMakeLists.txt  bench.c  run.sh
bench/scd/: run.sh  seed.sql  setup.sql
bench/scd/yaml/: scd.yml  setup.yml
bench/ssis/: README.md  gen-dtsx.py  run-betl-side.sh  run-comparison.sh  run-pg-side.sh
bench/ssis/sql/: schema.sql
bench/ssis/yaml/: betl-A-10col.yml  betl-A-1col.yml  betl-B-derived-10col-1m.yml  betl-B-derived-10col.yml  betl-C-write-10col-1m.yml  betl-C-write-10col.yml  betl-C-write-1col.yml  betl-D-bulk-10col-1m.yml  betl-D-bulk-10col.yml  betl-D-bulk-1col.yml  betl-E-bcp-10col-1m.yml  betl-E-bcp-10col.yml  betl-E-bcp-1col.yml  betl-PG-copy-10col-1m.yml  betl-PG-copy-10col.yml  betl-PG-copy-1col.yml  betl-PG-upsert-10col-1m.yml  betl-PG-upsert-10col.yml  betl-PG-upsert-1col.yml
docs/: BENCHMARKS.md  EXPR_ABI.md  PIPELINECOMPONENT.md  SSISEXPR.md  THIRD_PARTY_LICENSES.md
examples/: .env.example
examples/01-csv-to-postgres/: pipeline.betl.yml
examples/01-csv-to-postgres/fixtures/: orders-2026-05-04.csv
examples/01-csv-to-postgres/sql/: ddl_target.sql
examples/02-build-sales-star/: pipeline.betl.yml
examples/02-build-sales-star/sql/: ddl_source.sql  ddl_target.sql  refresh_marts.sql  seed_source.sql
examples/03-crm-migration/: connections.betl.yml  pipeline.betl.yml
examples/03-crm-migration/sql/: ddl_source.sql  ddl_target.sql  seed_source.sql
examples/04-ssis-orders-by-month/: pipeline.betl.yml
examples/04-ssis-orders-by-month/fixtures/: orders.csv
examples/04-ssis-orders-by-month/sql/: ddl_target.sql
examples/05-scd-type2/: README.md  pipeline.betl.yml
examples/05-scd-type2/sql/: dim_setup.sql
examples/06-scd-type2-mssql/: README.md  pipeline.betl.yml
examples/06-scd-type2-mssql/sql/: dim_setup.sql
fuzz/: .gitignore  CMakeLists.txt  README.md  csv_fuzz.c  expr_fuzz.c  json_fuzz.c  run-fuzz.sh  yaml_fuzz.c
fuzz/seeds/csv/: 02-quoted.csv  03-types.csv  04-types-rich.csv  05-bom-utf8.csv
fuzz/seeds/expr/: 01-arithmetic.expr  02-comparison.expr  03-functions.expr  04-conditional.expr  05-string-funcs.expr  06-cast.expr
fuzz/seeds/json/: 01-array-of-objects.json  03-nested.json  04-mixed-types.json
fuzz/seeds/yaml/: 01-minimal.yml  02-dataflow.yml  03-foreach.yml  04-foreach-glob.yml  05-condition.yml  06-multicast-join.yml  07-connections.yml  08-map-and-filter.yml
include/betl/: provider.h  version.h.in
providers/betl-dotnet/: CMakeLists.txt  dotnet_provider.c
providers/betl-dotnet/shim/: ArrowAbi.cs  Betl.Shim.csproj  BetlTask.cs  Bridges.cs  Connection.cs  Entry.cs  Init.cs  Log.cs  Params.cs
providers/betl-dotnet/shim/pipelinecomponent/: Dispatch.cs  Metadata.cs  PipelineBuffer.cs
providers/betl-dotnet/shim/script/: BetlScript.cs  Dispatch.cs
providers/betl-dotnet/shim/task/: TaskEntry.cs
providers/betl-lua/: CMakeLists.txt  lua_provider.c
providers/betl-ssisexpr/: CMakeLists.txt  ssisexpr_provider.c
schemas/: connections.schema.json  pipeline.schema.json
scripts/: install-dotnet.sh
src/cli/: cmd_run.c  cmd_validate.c  commands.h  main.c
src/loader/: registry.c  registry.h
src/pipeline/: pipeline.c  pipeline.h
src/runtime/: async_stream.c  async_stream.h  binary_util.c  binary_util.h  builtins.c  builtins.h  connections.c  connections.h  context.c  context.h  date_util.c  date_util.h  decimal_util.c  decimal_util.h  encoding.c  encoding.h  exec.c  exec.h  file_ops.c  file_ops.h  http_ops.c  http_ops.h  json_read.c  json_read.h  json_write.c  json_write.h  literal_expr.c  literal_expr.h  mssql_bulk_common.h  mssql_bulkinsert.c  mssql_bulkinsert.h  mssql_bulkinsert_bcp.c  mssql_exec.c  mssql_exec.h  mssql_lookup.c  mssql_lookup.h  mssql_read.c  mssql_read.h  mssql_sql.c  mssql_sql.h  (+51 more)
src/yaml/: yaml_load.c  yaml_load.h
tests/: CMakeLists.txt  run-and-report.sh  test_binary_util.c  test_context.c  test_control_flow.c  test_csv_encoding.c  test_csv_read.c  test_csv_write.c  test_date_util.c  test_decimal_util.c  test_dotnet_pc_alloc.c  test_dotnet_pipelinecomponent.c  test_dotnet_script.c  test_dotnet_task.c  test_dtsx2yaml.c  test_exec.c  test_file_ops.c  test_http_ops.c  test_json_io.c  test_loader.c  test_lua_expr.c  test_lua_map.c  test_lua_script.c  test_lua_task.c  test_mssql_bulkinsert.c  test_mssql_exec.c  test_mssql_lookup.c  test_mssql_read.c  test_mssql_read_date.c  test_mssql_read_stream.c  test_mssql_smoke.c  test_mssql_sql.c  test_mssql_upsert.c  test_mssql_upsert_date.c  test_multicast.c  test_parser_robustness.c  test_perf_regression.c  test_pg_copy.c  test_pg_exec.c  test_pg_lookup.c  (+30 more)
tests/fixtures/: bad_after_unknown.yml  bad_bundle_root.yml  bad_bundle_with_pipeline.yml  bad_conn_inline_password.yml  bad_conn_no_dsn.yml  bad_dataflow_empty.yml  bad_dup_stage_id.yml  bad_dup_step_id.yml  bad_from_unknown.yml  bad_include_cycle_a.yml  bad_include_cycle_b.yml  bad_include_missing.yml  bad_no_pipeline.yml  bad_param_no_type.yml  bad_param_required_with_default.yml  bad_self_after.yml  bad_stage_cycle.yml  bad_step_cycle.yml  bad_step_no_type.yml  csv_demo.yml  run_demo.yml  run_ssisexpr.yml  sample.csv  sample_typed.csv
tests/plugins/: ctx_probe_provider.c  echo_provider.c
tools/betl-dtsx2yaml/: Betl.Dtsx2Yaml.csproj  CMakeLists.txt  Converter.cs  DtsxModel.cs  DtsxParser.cs  Program.cs
tools/betl-dtsx2yaml/Mappers/: ExecuteSqlTask.cs  FlatFileDestination.cs  FlatFileSource.cs  Scd.cs  ScriptTask.cs  SqlServerDestination.cs
tools/betl-dtsx2yaml/fixtures/: controlflow.dtsx  simple-oledb.dtsx  transforms.dtsx  transforms2.dtsx
tools/betl-yaml-ui/: index.html  run.sh  server.py
